--- a/notebook/get-old-tweets.ipynb
+++ b/notebook/get-old-tweets.ipynb
@@ -7,7 +7,9 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "import GetOldTweets3 as got"
+    "import GetOldTweets3 as got\n",
+    "\n",
+    "searchString = 'map.decarbnow.abteil.org'"
    ]
   },
   {
@@ -16,10 +18,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tweetCriteria = got.manager.TweetCriteria().setQuerySearch('#decarbnow')\\\n",
+    "tweetCriteria = got.manager.TweetCriteria().setQuerySearch(searchString)\\\n",
     "                                           .setMaxTweets(2000)\n",
     "\n",
-    "tweets = got.manager.TweetManager.getTweets(tweetCriteria)"
+    "tweets = got.manager.TweetManager.getTweets(tweetCriteria)\n",
+    "len(tweets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[t.text for t in tweets]"
    ]
   },
   {
@@ -46,9 +58,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/#decarbnow-ids.json', 'w') as json_file:\n",
+    "with open('../data/{}-ids.json'.format(searchString), 'w') as json_file:\n",
     "    json.dump(ids, json_file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
