--- a/notebook/get-tweet-info.ipynb
+++ b/notebook/get-tweet-info.ipynb
@@ -8,9 +8,11 @@
    "source": [
     "import json\n",
     "import tweepy\n",
-    "import sys\n",
+    "import sys, os\n",
     "sys.path.append(\"..\")\n",
-    "from lib.helpers import get_api_app"
+    "from lib.twitter import get_api_app\n",
+    "\n",
+    "searchString = 'map.decarbnow.abteil.org'"
    ]
   },
   {
@@ -19,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/#decarbnow-ids.json') as json_file:\n",
+    "with open('../data/{}-ids.json'.format(searchString)) as json_file:\n",
     "    ids = json.load(json_file)\n",
     "len(ids)"
    ]
@@ -39,11 +41,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in ids[0:1]:\n",
+    "d = '../data/tweets/' + searchString\n",
+    "if not os.path.exists(d):\n",
+    "    os.mkdir(d)\n",
+    "\n",
+    "for i in ids:\n",
     "    tweet = api.get_status(i, include_entities=True, tweet_mode='extended')\n",
-    "    print(tweet)\n",
-    "    next\n",
-    "    with open('../data/tweets/{}.json'.format(i), 'w') as json_file:\n",
+    "    #print(tweet)\n",
+    "    #next\n",
+    "    with open(d + '/{}.json'.format(i), 'w') as json_file:\n",
     "        json.dump(tweet._json, json_file)"
    ]
   },
@@ -52,53 +58,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# OVER AND OUT"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dict(tweet._json)\n",
-    "#json.dumps(tweet._json)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tweet._json['full_text']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tweet._json['entities']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "api.get_status"
-   ]
   }
  ],
  "metadata": {
