create util functions

--- a/notebook/extract-info-intern.ipynb
+++ b/notebook/extract-info-intern.ipynb
@@ -6,13 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import sys\n",
     "import json\n",
-    "import tweepy\n",
-    "import sys, os\n",
+    "import copy\n",
     "sys.path.append(\"..\")\n",
-    "from lib.twitterAuth import get_api_app\n",
+    "from lib.tweets import * \n",
     "\n",
-    "searchString = 'map.decarbnow.abteil.org'"
+    "searchString = 'map.decarbnow.abteil.org'\n",
+    "extractUrl = searchString + '/'"
    ]
   },
   {
@@ -21,9 +23,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/{}-ids.json'.format(searchString)) as json_file:\n",
-    "    ids = json.load(json_file)\n",
-    "len(ids)"
+    "tweets = readTweetsFromFolder(os.path.join('tweets', searchString))\n",
+    "print('Count all tweets {}'.format(len(tweets)))\n",
+    "# print([getPathsOfLinks(t) for t in tweets])\n",
+    "tweetsFilter = [t for t in tweets if len(getPathsOfLinks(t)) > 0]\n",
+    "print('Count filtered tweets {}'.format(len(tweetsFilter)))"
    ]
   },
   {
@@ -32,7 +36,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api = get_api_app()"
+    "tree = TweetTree(tweets)\n",
+    "print(tree)\n",
+    "apiJson = tree.getApiJson()\n",
+    "apiJson"
    ]
   },
   {
@@ -41,24 +48,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = '../data/tweets/' + searchString\n",
-    "if not os.path.exists(d):\n",
-    "    os.mkdir(d)\n",
-    "\n",
-    "for i in ids:\n",
-    "    tweet = api.get_status(i, include_entities=True, tweet_mode='extended')\n",
-    "    #print(tweet)\n",
-    "    #next\n",
-    "    with open(d + '/{}.json'.format(i), 'w') as json_file:\n",
-    "        json.dump(tweet._json, json_file)"
+    "with open('../data/first.json', 'w') as json_file:\n",
+    "    json.dump(apiJson, json_file)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
