--- a/notebook/extract-info.ipynb
+++ b/notebook/extract-info.ipynb
@@ -7,16 +7,14 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import sys\n",
     "import json\n",
     "import copy\n",
+    "sys.path.append(\"..\")\n",
+    "from lib.tweets import readTweetsFromFolder\n",
     "\n",
     "searchString = 'map.decarbnow.abteil.org'\n",
-    "extractUrl = searchString + '/'\n",
-    "\n",
-    "tweetFolder = '../data/tweets/' + searchString + '/'\n",
-    "tweetFiles = os.listdir(tweetFolder)\n",
-    "\n",
-    "info = []"
+    "extractUrl = searchString + '/'"
    ]
   },
   {
@@ -25,9 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for tf in tweetFiles:\n",
-    "    with open(tweetFolder + tf, 'r') as f:\n",
-    "        info.append(json.load(f))\n",
+    "info = readTweetsFromFolder(os.path.join('tweets', searchString))\n",
     "        \n",
     "dict(info[0])"
    ]
