--- a/notebook/extract-info-intern.ipynb
+++ b/notebook/extract-info-intern.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/first.json', 'w') as json_file:\n",
+    "with open('../data/api.json', 'w') as json_file:\n",
     "    json.dump(apiJson, json_file)"
    ]
   }
