add init, improving structure, starting tweet class, ...

--- a/notebook/get-tweet-info.ipynb
+++ b/notebook/get-tweet-info.ipynb
@@ -63,9 +63,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "decarbnow",
+   "display_name": "decarbnow backend",
    "language": "python",
-   "name": "decarbnow"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
