--- a/notebook/get-old-tweets.ipynb
+++ b/notebook/get-old-tweets.ipynb
@@ -72,9 +72,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "decarbnow",
+   "display_name": "decarbnow backend",
    "language": "python",
-   "name": "decarbnow"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
