improving log output, code cleaning

--- a/notebook/get-tweet-info.ipynb
+++ b/notebook/get-tweet-info.ipynb
@@ -10,7 +10,7 @@
     "import tweepy\n",
     "import sys, os\n",
     "sys.path.append(\"..\")\n",
-    "from lib.twitterAuth import get_api_app\n",
+    "from lib.twitter_auth import get_api_app\n",
     "\n",
     "searchString = 'map.decarbnow.abteil.org'"
    ]
